whoamiv2/whoami2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv2
  labels:
    app: whoamiv2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoamiv2
  template:
    metadata:
      labels:
        app: whoamiv2
    spec:
      containers:
        - name: whoamiv2
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
