whoamiv2/whoami-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoamiv2

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoamiv2
