whoamiv2/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoamiv2-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: whoamiv2
            port:
              name: web
